AEE docs overflow fix

--- a/doc/css/automizyee.css
+++ b/doc/css/automizyee.css
@@ -4,6 +4,11 @@ body{
     padding: 0;
     margin: 0;
     font-family: Arial;
+    overflow:auto;
+}
+
+body.overflow-hidden{
+    overflow:hidden;
 }
 
 #container{
